--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /* EXO 1 */
 section{
     padding-bottom: 50px;
-    border: black solid 1px;
+    border-bottom: black solid 1px;
 }
 section:first-child>h4{
     color: blue;
@@ -18,9 +18,10 @@ section:nth-child(3)>h3,section:nth-child(3)>ul{
 }
 
 /* EXO 4 */
+/* OU section:nth-child(4)>ul>li>a */
 section:nth-child(4)>ul>li:nth-child(2){
     font-size: 25px;
-}
+} 
 
 /* EXO 5 */
 section:nth-child(5)>h3+span{
@@ -34,12 +35,12 @@ img{
 }
 
 /* EXO 7 */
-/*body:last-child>p:hover{
+body:last-child>section>p:hover{ 
     color: chartreuse;
-}*/
-section:nth-child(7)>p:hover{
-    color: greenyellow;
 }
+/*section:nth-child(7)>p:hover{
+     color: greenyellow; 
+}*/
 
 
 
